[package]
name = "js-bridge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared utilities for js-bridge tooling (logger, naming, cargo metadata, npm deps)"

[dependencies]
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
