[package]
name = "wasm-js-bridge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI build tool for packaging Rust crates as npm WASM packages"

[[bin]]
name = "wasm-js-bridge"
path = "src/main.rs"

[dependencies]
js-bridge-core = { path = "../js-bridge-core" }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
serde_json = { version = "1", features = ["preserve_order"] }
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
