[package]
name = "wasm-js-bridge-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for wasm-js-bridge — WASM export + type generation"
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
